[add] setpost doc
